[metadata]
name = thermalprinter
version = 0.2.0
author = Mickaël 'Tiger-222' Schoentgen
author-email = contact@tiger-222.fr
description = Driver for the DP-EH600 thermal printer (AdaFruit).
long_description = file: README.rst
url = https://github.com/BoboTiG/thermalprinter
home-page = https://pypi.org/project/thermalprinter/
keywords = driver, thermalprinter, thermal, printer, dp-eh600, adafruit
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Printing
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware :: Hardware Drivers

[options]
zip-safe = False
packages = thermalprinter
python_requires = >=3.5
install_requires = pyserial>=3.0

[bdist_wheel]
universal = 1

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120

[tool:pytest]
addopts =
    --showlocals
    --strict
    -v
