[metadata]
name = thermalprinter
version = 0.3.0
author = Mickaël 'Tiger-222' Schoentgen
author_email = contact@tiger-222.fr
description = Driver for the DP-EH600 thermal printer (AdaFruit).
long_description = file: README.rst
url = https://github.com/BoboTiG/thermalprinter
home_page = https://pypi.org/project/thermalprinter/
keywords = driver, thermalprinter, thermal, printer, dp-eh600, dp-eh400, adafruit
license = MIT
license_files = [LICENSE]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Printing
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware :: Hardware Drivers

[options]
packages = thermalprinter
include_package_data = True
python_requires = >=3.6
install_requires = pyserial>=3.0

[options.package_data]
* =
    py.typed

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pylint
docs =
    sphinx
    enum-tools[sphinx]
    sphinx-rtd-theme==3.0.1
tests =
    pillow
    pytest
    pytest-cov

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120
inline-quotes = double

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[tool:pytest]
addopts =
    --cov-report=term-missing
    --cov=thermalprinter
    --showlocals
    --strict-markers
    -r fE
    -vv
